--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,12 @@
                         </goals>
                     </execution>
                 </executions>
+
+                <configuration>
+                    <compilerPlugins>
+                        <plugin>kotlinx-serialization</plugin>
+                    </compilerPlugins>
+                </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -71,6 +77,11 @@
             <artifactId>kotlin-test-junit5</artifactId>
             <version>2.2.10</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlinx</groupId>
+            <artifactId>kotlinx-serialization-json</artifactId>
+            <version>1.9.0</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
